--- a/src/pages/recipes.mdx
+++ b/src/pages/recipes.mdx
@@ -1,68 +1,107 @@
-import Recipe from '../components/Recipe'
+import Recipe from '../components/Recipe';
 
 # Recipes
 
 Explore real-world examples and implementation patterns using Moondream.
-<Recipe
-  title="Interactive Image Analysis Demo"
-  description="A Gradio-based web interface for real-time image analysis, featuring visual question answering and object detection with bounding box visualization."
-  github="https://github.com/vikhyat/moondream/blob/main/gradio_demo.py"
-  demo="https://moondream.ai/demo"
-  tags={['Gradio', 'Interactive UI', 'Object Detection', 'VQA']}
-  performance={[
-    {
-      device: "RTX 3090",
-      speed: "150ms",
-      memory: "2.1GB",
-      throughput: "6.7 img/s"
-    },
-    {
-      device: "CPU (8 cores)",
-      speed: "450ms",
-      memory: "1.8GB",
-      throughput: "2.2 img/s"
-    }
-  ]}
->
-  <Recipe.CodePreview 
-    filename="gradio_demo.py"
-    sourceUrl="https://github.com/vikhyat/moondream/blob/main/gradio_demo.py"
+
+
+  <Recipe
+    title="Interactive Image Analysis Demo"
+    description="A Gradio-based web interface for real-time image analysis, featuring visual question answering and object detection with bounding box visualization."
+    github="https://github.com/vikhyat/moondream/blob/main/gradio_demo.py"
+    demo="https://moondream.ai/demo"
+    tags={['Gradio', 'Interactive UI', 'Object Detection', 'VQA']}
   >
-    {`# Core setup
+    <Recipe.CodePreview 
+      filename="gradio_demo.py"
+      sourceUrl="https://github.com/vikhyat/moondream/blob/main/gradio_demo.py"
+    >
+      {`# Core setup
 model_id = "vikhyatk/moondream2"
 tokenizer = AutoTokenizer.from_pretrained(model_id)
 moondream = Moondream.from_pretrained(model_id).to(device)
 
 # Create the interface
-with gr.Blocks() as demo:
-    gr.Markdown("# 🌔 moondream")
-    with gr.Row():
-        prompt = gr.Textbox(label="Input Prompt", value="Describe this image.")
-        submit = gr.Button("Submit")
-    with gr.Row():
-        img = gr.Image(type="pil", label="Upload an Image")
-        with gr.Column():
-            output = gr.Markdown(label="Response")
-            ann = gr.Image(visible=False, label="Annotated Image")`}
-  </Recipe.CodePreview>
 
-  <Recipe.Feature icon="⚡️" title="Streaming Responses">
-    Get real-time text generation with token-by-token streaming for a more
-    interactive experience.
-  </Recipe.Feature>
+with gr.Blocks() as demo: gr.Markdown("# 🌔 moondream") with gr.Row(): prompt = gr.Textbox(label="Input Prompt", value="Describe this image.") submit = gr.Button("Submit") with
+gr.Row(): img = gr.Image(type="pil", label="Upload an Image") with gr.Column(): output = gr.Markdown(label="Response") ann = gr.Image(visible=False, label="Annotated Image")`}
 
-  <Recipe.Feature icon="🎯" title="Automatic Annotations">
-    Visualize object detection results with automatically generated bounding
-    boxes overlaid on images.
-  </Recipe.Feature>
+</Recipe.CodePreview>
 
-  <Recipe.Feature icon="🔄" title="Flexible Runtime">
-    Switch between CPU and GPU inference with automatic device detection
-    and optimization.
-  </Recipe.Feature>
+    <Recipe.Feature icon="⚡️" title="Streaming Responses">
+      Get real-time text generation with token-by-token streaming for a more
+      interactive experience.
+    </Recipe.Feature>
 
-  <Recipe.Feature icon="🚀" title="Simple Deployment">
-    Deploy as a standalone web app or integrate into existing Gradio
-    applications with minimal configuration.
-  </Recipe.Feature>
-</Recipe>
+    <Recipe.Feature icon="🎯" title="Automatic Annotations">
+      Visualize object detection results with automatically generated bounding
+      boxes overlaid on images.
+    </Recipe.Feature>
+
+    <Recipe.Feature icon="🔄" title="Flexible Runtime">
+      Switch between CPU and GPU inference with automatic device detection
+      and optimization.
+    </Recipe.Feature>
+
+    <Recipe.Feature icon="🚀" title="Simple Deployment">
+      Deploy as a standalone web app or integrate into existing Gradio
+      applications with minimal configuration.
+    </Recipe.Feature>
+
+  </Recipe>
+
+  ---
+    <Recipe
+    title="Jupyter Notebook Quick Start"
+    description="Run Moondream in a Jupyter notebook or Google Colab environment with Google Drive integration for easy image analysis and experimentation."
+    github="https://github.com/vikhyat/moondream/blob/main/examples/jupyter_notebook.ipynb"
+    demo="https://colab.research.google.com/drive/1g88_P2Is8_dPqu-vX3D9VI80jJMjycUT?usp=sharing"
+    tags={['Jupyter', 'Google Colab', 'Object Detection', 'VQA']}
+  >
+    <Recipe.CodePreview 
+      filename="jupyter_notebook.ipynb"
+      sourceUrl="https://colab.research.google.com/drive/1g88_P2Is8_dPqu-vX3D9VI80jJMjycUT?usp=sharing"
+    >
+      {`# Install and import dependencies
+!pip install moondream
+import moondream as md
+from PIL import Image
+
+# Download model weights
+variant = '0.5b-int8'  # Lightweight model for basic usage
+model_path = download_model(variant=variant)
+
+# Initialize model
+model = md.vl(model_path)
+
+# Load and analyze image
+image = Image.open("sample.jpg")
+encoded_image = model.encode_image(image)
+
+# Generate caption
+caption = model.caption(encoded_image)
+print(caption["caption"])
+
+# Ask questions about the image
+question = "What colors are prominent in this image?"
+answer = model.query(encoded_image, question)
+print(answer["answer"])`}
+    </Recipe.CodePreview>
+
+    <Recipe.Feature icon="⚡️" title="Multiple Model Options">
+      Choose from different model variants optimized for your needs - from lightweight 0.5B models to full 2B versions.
+    </Recipe.Feature>
+
+    <Recipe.Feature icon="🎯" title="Google Drive Integration">
+      Seamlessly load images and save results using Google Drive integration in Colab notebooks.
+    </Recipe.Feature>
+
+    <Recipe.Feature icon="🔄" title="Flexible Runtime Options">
+      Run on CPU (Free Tier) or upgrade to GPU runtime for faster inference with T4/V100/A100 options.
+    </Recipe.Feature>
+
+    <Recipe.Feature icon="🚀" title="Interactive Development">
+      Experiment and iterate quickly with interactive Jupyter notebook environment and real-time output.
+    </Recipe.Feature>
+
+  </Recipe>
