--- a/src/pages/cloud/detect.mdx
+++ b/src/pages/cloud/detect.mdx
@@ -2,141 +2,85 @@ import { Tabs } from 'nextra/components'
 import { Callout } from 'nextra/components'
 import Head from 'next/head'
 
-# Object Detection API
+# /point
 
 <Head>
   <meta name="color-scheme" content="light" />
 </Head>
 
-Detect and locate objects in images.
+Get coordinates for objects in images.
 
 ## Quick Start
 
-```typescript
-import { vl } from "moondream";
-import fs from "fs";
+First, install the package:
 
-// Initialize the client
-const model = new vl({
-  apiKey: "your-api-key",
-});
-
-// Read an image file
-const image = fs.readFileSync("image.jpg");
-
-// Detect objects
-const detections = await model.detect(image, "cat");
-console.log(detections);
-// [
-//   {
-//     x_min: 0.2,  // Normalized coordinates (0-1)
-//     y_min: 0.3,  // Top-left corner
-//     x_max: 0.5,  // Bottom-right corner
-//     y_max: 0.7
-//   },
-//   ...
-// ]
-```
-
-## API Specification
-
-### Request Model
-~~~python filename="models.py"
-class DetectRequest(BaseModel):
-    image_url: str
-    object: str  # Object to detect in the image
-~~~
-
-### Response Model
-~~~python filename="response.py"
-class DetectOutput(BaseModel):
-    objects: List[Region]  # List of bounding boxes with coordinates
-~~~
-
-### Example Response
-```python
-{
-    "objects": [
-        {
-            "x_min": 0.2,  # Normalized coordinates (0-1)
-            "y_min": 0.3,  # Top-left corner
-            "x_max": 0.5,  # Bottom-right corner
-            "y_max": 0.7
-        },
-        {
-            "x_min": 0.6,
-            "y_min": 0.4,
-            "x_max": 0.8,
-            "y_max": 0.9
-        }
-    ]
-}
-```
-
-## Example Usage
-
-<Tabs items={['Node.js Client', 'Python Client', 'cURL', 'Node.js HTTP', 'Fetch', 'Axios']}>
+<Tabs items={['Python', 'Node.js']}>
   <Tabs.Tab>
-```typescript filename="detect-client.ts"
-import { vl } from "moondream";
-import fs from "fs";
-
-// Initialize client
-const model = new vl({
-  apiKey: process.env.MOONDREAM_API_KEY
-});
-
-async function main() {
-  // Read image file
-  const image = fs.readFileSync("image.jpg");
-  
-  // Detect objects
-  const detections = await model.detect(image, "cat");
-  
-  if (!detections.length) {
-    console.log("No objects detected");
-  } else {
-    detections.forEach((box, index) => {
-      console.log(`Object ${index + 1} found at coordinates:`);
-      console.log(`  Top-left: (${box.x_min.toFixed(2)}, ${box.y_min.toFixed(2)})`);
-      console.log(`  Bottom-right: (${box.x_max.toFixed(2)}, ${box.y_max.toFixed(2)})`);
-    });
-  }
-}
-
-main().catch(console.error);
-```
+~~~bash
+pip install moondream
+~~~
   </Tabs.Tab>
   <Tabs.Tab>
-```python filename="detect-client.py"
+~~~bash
+npm install moondream
+~~~
+  </Tabs.Tab>
+</Tabs>
+
+Place an image file in your working directory, then:
+
+<Tabs items={['Python', 'Node.js']}>
+  <Tabs.Tab>
+~~~python
 import moondream as md
 from PIL import Image
 
-# Initialize client
-model = md.vl(api_key="your_api_key_here")
+model = md.vl(api_key="your-api-key")
 
-# Load image
+# Load an image (supports PIL.Image, numpy arrays, or file paths)
 image = Image.open("image.jpg")
 
-# Detect objects
-result = model.detect(image, "cat")
-
-if not result["objects"]:
-    print("No objects detected")
-else:
-    for i, box in enumerate(result["objects"], 1):
-        print(f"Object {i} found at coordinates:")
-        print(f"  Top-left: ({box['x_min']:.2f}, {box['y_min']:.2f})")
-        print(f"  Bottom-right: ({box['x_max']:.2f}, {box['y_max']:.2f})")
-```
+# Returns list of coordinates
+points = model.point(image, "cat")
+print(points)
+# [
+#   {
+#     "x": 0.5,  # Normalized coordinates (0-1)
+#     "y": 0.7   # Point location
+#   },
+#   ...
+# ]
+~~~
   </Tabs.Tab>
   <Tabs.Tab>
-~~~bash filename="detect.sh"
+~~~typescript
+import { vl } from "moondream";
+import fs from 'fs';
+
+const model = new vl({
+  apiKey: "your-api-key" 
+});
+
+// Load image (supports Buffer or Base64EncodedImage: { imageUrl: string })
+const image = fs.readFileSync('./image.jpg');
+
+// Returns Promise<Array<{x: number, y: number}>>
+const points = await model.point(image, "cat");
+console.log(points);
+~~~
+  </Tabs.Tab>
+</Tabs>
+
+## Direct API Access
+
+<Tabs items={['cURL', 'Python', 'Node.js']}>
+  <Tabs.Tab>
+~~~bash
 # Convert image to base64
-IMAGE_BASE64=$(base64 -i image.jpg)
+IMAGE_BASE64=$(base64 -i ./image.jpg)
 
 # Make API request
-curl -X POST https://api.moondream.ai/v1/detect \
+curl -X POST https://api.moondream.ai/v1/point \
   -H "Content-Type: application/json" \
   -H "X-Moondream-Auth: $MOONDREAM_API_KEY" \
   -d "{
@@ -146,94 +90,49 @@ curl -X POST https://api.moondream.ai/v1/detect \
 ~~~
   </Tabs.Tab>
   <Tabs.Tab>
-~~~typescript filename="detect.ts" {3-4,14,33-34} showLineNumbers
-import { readFileSync } from 'fs';
-import { request } from 'https';
+~~~python
+import os
+from urllib.request import Request, urlopen
+import json
+import base64
 
-// Load and convert image to base64
-function getBase64Image(imagePath: string): string {
-  const imageBuffer = readFileSync(imagePath);
-  return imageBuffer.toString('base64');
+def get_base64_image(image_path):
+    with open(image_path, "rb") as f:
+        return base64.b64encode(f.read()).decode()
+
+image_base64 = get_base64_image("./image.jpg")
+data = {
+    "image_url": f"data:image/jpeg;base64,{image_base64}",
+    "object": "cat"
 }
 
-// Get API key from environment
-const apiKey = process.env.MOONDREAM_API_KEY;
-if (!apiKey) {
-  throw new Error('Please set MOONDREAM_API_KEY environment variable');
+headers = {
+    "X-Moondream-Auth": os.getenv("MOONDREAM_API_KEY"),
+    "Content-Type": "application/json"
 }
 
-// Prepare request data
-const imageBase64 = getBase64Image('image.jpg');
-const data = {
-  image_url: `data:image/jpeg;base64,${imageBase64}`,
-  object: 'cat'
-};
+req = Request(
+    "https://api.moondream.ai/v1/point",
+    data=json.dumps(data).encode(),
+    headers=headers,
+    method="POST"
+)
 
-// Set up request options
-const options = {
-  hostname: 'playground2.servers.moondream.ai',
-  path: '/v1/detect',
-  method: 'POST',
-  headers: {
-    'X-Moondream-Auth': apiKey,
-    'Content-Type': 'application/json'
-  }
-};
-
-// Make request
-const req = request(options, (res) => {
-  let data = '';
-
-  res.on('data', (chunk) => {
-    data += chunk;
-  });
-
-  res.on('end', () => {
-    try {
-      const result = JSON.parse(data);
-      if (!result.result.length) {
-        console.log('No objects detected');
-      } else {
-        result.result.forEach((box, index) => {
-          console.log(`Object ${index + 1} found at coordinates:`);
-          console.log(`  Top-left: (${box.x_min.toFixed(2)}, ${box.y_min.toFixed(2)})`);
-          console.log(`  Bottom-right: (${box.x_max.toFixed(2)}, ${box.y_max.toFixed(2)})`);
-        });
-      }
-    } catch (error) {
-      console.error('Error parsing response:', error);
-    }
-  });
-});
-
-req.on('error', (error) => {
-  console.error('Error making request:', error);
-});
-
-// Send request
-req.write(JSON.stringify(data));
-req.end();
+with urlopen(req) as response:
+    result = json.loads(response.read())
+    print(result["result"])
 ~~~
   </Tabs.Tab>
   <Tabs.Tab>
-~~~javascript filename="detect-fetch.js" {14,33-34} showLineNumbers
-// Load and convert image to base64
-async function getBase64Image(imagePath) {
-  const response = await fetch(imagePath);
-  const blob = await response.blob();
-  return new Promise((resolve, reject) => {
-    const reader = new FileReader();
-    reader.onloadend = () => resolve(reader.result.split(',')[1]);
-    reader.onerror = reject;
-    reader.readAsDataURL(blob);
-  });
-}
+~~~javascript
+import fs from 'fs';
 
-async function detectObject() {
+async function pointObject() {
   try {
-    const imageBase64 = await getBase64Image('image.jpg');
-    
-    const response = await fetch('https://api.moondream.ai/v1/detect', {
+    const imageBuffer = fs.readFileSync('./image.jpg');
+    const imageBase64 = imageBuffer.toString('base64');
+
+    const response = await fetch('https://api.moondream.ai/v1/point', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
@@ -241,89 +140,22 @@ async function detectObject() {
       },
       body: JSON.stringify({
         image_url: `data:image/jpeg;base64,${imageBase64}`,
-        object: 'cat'
+        object: "cat"
       })
     });
 
-    if (!response.ok) {
-      throw new Error(`HTTP error! status: ${response.status}`);
-    }
-
     const data = await response.json();
-    if (!data.result.length) {
-      console.log('No objects detected');
-    } else {
-      data.result.forEach((box, index) => {
-        console.log(`Object ${index + 1} found at coordinates:`);
-        console.log(`  Top-left: (${box.x_min.toFixed(2)}, ${box.y_min.toFixed(2)})`);
-        console.log(`  Bottom-right: (${box.x_max.toFixed(2)}, ${box.y_max.toFixed(2)})`);
-      });
-    }
+    console.log(data.result);
   } catch (error) {
-    console.error('Error making request:', error);
+    console.error('Error:', error);
   }
 }
 
-detectObject();
-~~~
-  </Tabs.Tab>
-  <Tabs.Tab>
-~~~javascript filename="detect-axios.js" {14,33-34} showLineNumbers
-import axios from 'axios';
-import fs from 'fs';
-
-async function detectObject() {
-  try {
-    // Read and convert image to base64
-    const imageBuffer = fs.readFileSync('image.jpg');
-    const imageBase64 = imageBuffer.toString('base64');
-
-    const response = await axios({
-      method: 'post',
-      url: 'https://api.moondream.ai/v1/detect',
-      headers: {
-        'Content-Type': 'application/json',
-        'X-Moondream-Auth': process.env.MOONDREAM_API_KEY
-      },
-      data: {
-        image_url: `data:image/jpeg;base64,${imageBase64}`,
-        object: 'cat'
-      }
-    });
-
-    if (!response.data.result.length) {
-      console.log('No objects detected');
-    } else {
-      response.data.result.forEach((box, index) => {
-        console.log(`Object ${index + 1} found at coordinates:`);
-        console.log(`  Top-left: (${box.x_min.toFixed(2)}, ${box.y_min.toFixed(2)})`);
-        console.log(`  Bottom-right: (${box.x_max.toFixed(2)}, ${box.y_max.toFixed(2)})`);
-      });
-    }
-  } catch (error) {
-    if (error.response) {
-      console.error('Error from server:', error.response.data);
-    } else if (error.request) {
-      console.error('No response received:', error.request);
-    } else {
-      console.error('Error making request:', error.message);
-    }
-  }
-}
-
-detectObject();
+pointObject();
 ~~~
   </Tabs.Tab>
 </Tabs>
 
 <Callout type="info">
-  The examples above demonstrate different ways to interact with the API. The Node.js and Python client libraries provide the simplest integration, while other examples show how to use the REST API directly with popular libraries and tools.
+  The examples above show both client library usage and direct API access patterns. The client libraries provide the simplest integration, while direct API access offers more control.
 </Callout>
-
----
-
-## Next Steps
-
-- Check out our [Examples](/cookbook/basic-usage) to see object detection in action with sample code and use cases
-- Learn about model specifications and performance in our [Technical Specifications](/technical-specifications) guide
-- Want to use moondream with Transformers? Check out our [Integration Guide](/advanced/transformers)
