--- a/src/pages/cloud/query.mdx
+++ b/src/pages/cloud/query.mdx
@@ -2,7 +2,7 @@ import { Tabs } from 'nextra/components'
 import { Callout } from 'nextra/components'
 import Head from 'next/head'
 
-# Visual Question Answering API
+# /query
 
 <Head>
   <meta name="color-scheme" content="light" />
@@ -12,135 +12,70 @@ Ask questions about images and get natural language answers.
 
 ## Quick Start
 
-```typescript
-import { vl } from "moondream";
-import fs from "fs";
+First, install the package:
 
-// Initialize the client
-const model = new vl({
-  apiKey: "your-api-key",
-});
-
-// Read an image file
-const image = fs.readFileSync("image.jpg");
-
-// Ask a question
-const answer = await model.query(image, "What's in this image?");
-console.log(answer);
-
-// With streaming
-const stream = await model.query(image, "What's in this image?", true);
-for await (const chunk of stream.answer) {
-  process.stdout.write(chunk);
-}
-```
-
-## API Specification
-
-### Request Model
-~~~python filename="models.py"
-class VqaRequest(BaseModel):
-    image_url: str
-    question: str
-    stream: Optional[bool] = False
-~~~
-
-### Response Model
-<Tabs items={['Non-Streaming', 'Streaming']}>
+<Tabs items={['Python', 'Node.js']}>
   <Tabs.Tab>
-```python
-class QueryOutput(BaseModel):
-    answer: str
-```
+~~~bash
+pip install moondream
+~~~
   </Tabs.Tab>
   <Tabs.Tab>
-```python
-class QueryOutput(BaseModel):
-    answer: Generator  # Yields tokens from stream
-```
+~~~bash
+npm install moondream
+~~~
   </Tabs.Tab>
 </Tabs>
 
-### Example Response
-```python
-# Non-streaming response
-{
-    "result": "The main color in this image is blue."
-}
+Place an image file in your working directory, then:
 
-# Streaming response chunks
-{"chunk": "The ", "completed": false}
-{"chunk": "main ", "completed": false}
-{"chunk": "color ", "completed": false}
-{"chunk": "is ", "completed": false}
-{"chunk": "blue", "completed": false}
-{"chunk": ".", "completed": true}
-```
-
-## Example Usage
-
-<Tabs items={['Node.js Client', 'Python Client', 'cURL', 'Node.js HTTP', 'Fetch', 'Axios']}>
+<Tabs items={['Python', 'Node.js']}>
   <Tabs.Tab>
-```typescript filename="query-client.ts"
-import { vl } from "moondream";
-import fs from "fs";
-
-// Initialize client
-const model = new vl({
-  apiKey: process.env.MOONDREAM_API_KEY
-});
-
-async function main() {
-  // Read image file
-  const image = fs.readFileSync("image.jpg");
-  
-  // Ask a question
-  const answer = await model.query(
-    image,
-    "What is the main color in this image?"
-  );
-  console.log("Answer:", answer);
-  
-  // With streaming
-  const stream = await model.query(
-    image,
-    "What is the main color in this image?",
-    true
-  );
-  console.log("\nStreaming answer:");
-  for await (const chunk of stream.answer) {
-    process.stdout.write(chunk);
-  }
-}
-
-main().catch(console.error);
-```
-  </Tabs.Tab>
-  <Tabs.Tab>
-```python filename="query-client.py"
+~~~python
 import moondream as md
 from PIL import Image
 
-# Initialize client
-model = md.vl(api_key="your_api_key_here")
+model = md.vl(api_key="your-api-key")
 
-# Load image
-image = Image.open("image.jpg")
+# Load an image (supports PIL.Image, numpy arrays, or file paths)
+image = Image.open("./image.jpg")
 
-# Ask a question
-result = model.query(image, "What is the main color in this image?")
-print("Answer:", result["answer"])
+# Returns str
+answer = model.query(image, "What's in this image?")
 
-# With streaming
-print("\nStreaming answer:")
-for chunk in model.query(image, "What is the main color in this image?", stream=True)["answer"]:
-    print(chunk, end="", flush=True)
-```
+# Returns Generator[str]
+for chunk in model.query(image, "What's in this image?", stream=True):
+    print(chunk, end="")
+~~~
   </Tabs.Tab>
   <Tabs.Tab>
-~~~bash filename="query.sh"
+~~~typescript
+import { vl } from "moondream";
+import fs from 'fs';
+
+const model = new vl({
+  apiKey: "your-api-key" 
+});
+
+// Load image (supports Buffer or Base64EncodedImage: { imageUrl: string })
+const image = fs.readFileSync('./image.jpg');  // recommended for better performance
+
+// Returns Promise<string>
+const answer = await model.query(image, "What's in this image?");
+
+// Returns Promise<{answer: AsyncGenerator<string>}>
+const stream = await model.query(image, "What's in this image?", true);
+~~~
+  </Tabs.Tab>
+</Tabs>
+
+## Direct API Access
+
+<Tabs items={['cURL', 'Python', 'Node.js']}>
+  <Tabs.Tab>
+~~~bash
 # Convert image to base64
-IMAGE_BASE64=$(base64 -i image.jpg)
+IMAGE_BASE64=$(base64 -i ./image.jpg)
 
 # Make API request
 curl -X POST https://api.moondream.ai/v1/query \
@@ -148,92 +83,55 @@ curl -X POST https://api.moondream.ai/v1/query \
   -H "X-Moondream-Auth: $MOONDREAM_API_KEY" \
   -d "{
     \"image_url\": \"data:image/jpeg;base64,$IMAGE_BASE64\",
-    \"question\": \"What is the main color in this image?\",
+    \"question\": \"What's in this image?\",
     \"stream\": false
   }"
 ~~~
   </Tabs.Tab>
   <Tabs.Tab>
-~~~typescript filename="query.ts" {3-4,14,33-34} showLineNumbers
-import { readFileSync } from 'fs';
-import { request } from 'https';
+~~~python
+import os
+from urllib.request import Request, urlopen
+import json
+import base64
 
-// Load and convert image to base64
-function getBase64Image(imagePath: string): string {
-  const imageBuffer = readFileSync(imagePath);
-  return imageBuffer.toString('base64');
+def get_base64_image(image_path):
+    with open(image_path, "rb") as f:
+        return base64.b64encode(f.read()).decode()
+
+image_base64 = get_base64_image("./image.jpg")
+data = {
+    "image_url": f"data:image/jpeg;base64,{image_base64}",
+    "question": "What's in this image?",
+    "stream": False
 }
 
-// Get API key from environment
-const apiKey = process.env.MOONDREAM_API_KEY;
-if (!apiKey) {
-  throw new Error('Please set MOONDREAM_API_KEY environment variable');
+headers = {
+    "X-Moondream-Auth": os.getenv("MOONDREAM_API_KEY"),
+    "Content-Type": "application/json"
 }
 
-// Prepare request data
-const imageBase64 = getBase64Image('image.jpg');
-const data = {
-  image_url: `data:image/jpeg;base64,${imageBase64}`,
-  question: 'What is the main color in this image?',
-  stream: false
-};
+req = Request(
+    "https://api.moondream.ai/v1/query",
+    data=json.dumps(data).encode(),
+    headers=headers,
+    method="POST"
+)
 
-// Set up request options
-const options = {
-  hostname: 'playground2.servers.moondream.ai',
-  path: '/v1/query',
-  method: 'POST',
-  headers: {
-    'X-Moondream-Auth': apiKey,
-    'Content-Type': 'application/json'
-  }
-};
-
-// Make request
-const req = request(options, (res) => {
-  let data = '';
-
-  res.on('data', (chunk) => {
-    data += chunk;
-  });
-
-  res.on('end', () => {
-    try {
-      const result = JSON.parse(data);
-      console.log('Answer:', result.result);
-    } catch (error) {
-      console.error('Error parsing response:', error);
-    }
-  });
-});
-
-req.on('error', (error) => {
-  console.error('Error making request:', error);
-});
-
-// Send request
-req.write(JSON.stringify(data));
-req.end();
+with urlopen(req) as response:
+    result = json.loads(response.read())
+    print(result["answer"])
 ~~~
   </Tabs.Tab>
   <Tabs.Tab>
-~~~javascript filename="query-fetch.js" {14,33-34} showLineNumbers
-// Load and convert image to base64
-async function getBase64Image(imagePath) {
-  const response = await fetch(imagePath);
-  const blob = await response.blob();
-  return new Promise((resolve, reject) => {
-    const reader = new FileReader();
-    reader.onloadend = () => resolve(reader.result.split(',')[1]);
-    reader.onerror = reject;
-    reader.readAsDataURL(blob);
-  });
-}
+~~~javascript
+import fs from 'fs';
 
 async function askQuestion() {
   try {
-    const imageBase64 = await getBase64Image('image.jpg');
-    
+    const imageBuffer = fs.readFileSync('./image.jpg');
+    const imageBase64 = imageBuffer.toString('base64');
+
     const response = await fetch('https://api.moondream.ai/v1/query', {
       method: 'POST',
       headers: {
@@ -242,59 +140,15 @@ async function askQuestion() {
       },
       body: JSON.stringify({
         image_url: `data:image/jpeg;base64,${imageBase64}`,
-        question: 'What is the main color in this image?',
+        question: "What's in this image?",
         stream: false
       })
     });
 
-    if (!response.ok) {
-      throw new Error(`HTTP error! status: ${response.status}`);
-    }
-
     const data = await response.json();
-    console.log('Answer:', data.result);
+    console.log(data.answer);
   } catch (error) {
-    console.error('Error making request:', error);
-  }
-}
-
-askQuestion();
-~~~
-  </Tabs.Tab>
-  <Tabs.Tab>
-~~~javascript filename="query-axios.js" {14,33-34} showLineNumbers
-import axios from 'axios';
-import fs from 'fs';
-
-async function askQuestion() {
-  try {
-    // Read and convert image to base64
-    const imageBuffer = fs.readFileSync('image.jpg');
-    const imageBase64 = imageBuffer.toString('base64');
-
-    const response = await axios({
-      method: 'post',
-      url: 'https://api.moondream.ai/v1/query',
-      headers: {
-        'Content-Type': 'application/json',
-        'X-Moondream-Auth': process.env.MOONDREAM_API_KEY
-      },
-      data: {
-        image_url: `data:image/jpeg;base64,${imageBase64}`,
-        question: 'What is the main color in this image?',
-        stream: false
-      }
-    });
-
-    console.log('Answer:', response.data.result);
-  } catch (error) {
-    if (error.response) {
-      console.error('Error from server:', error.response.data);
-    } else if (error.request) {
-      console.error('No response received:', error.request);
-    } else {
-      console.error('Error making request:', error.message);
-    }
+    console.error('Error:', error);
   }
 }
 
@@ -304,13 +158,5 @@ askQuestion();
 </Tabs>
 
 <Callout type="info">
-  The examples above demonstrate different ways to interact with the API. The Node.js and Python client libraries provide the simplest integration, while other examples show how to use the REST API directly with popular libraries and tools.
+  The examples above show both client library usage and direct API access patterns. The client libraries provide the simplest integration, while direct API access offers more control.
 </Callout>
-
----
-
-## Next Steps
-
-- Check out our [Examples](/cookbook/basic-usage) to see visual question answering in action with sample code and use cases
-- Learn about model specifications and performance in our [Technical Specifications](/technical-specifications) guide
-- Want to use moondream with Transformers? Check out our [Integration Guide](/advanced/transformers)
