added hrefs to feature cards and discover

--- a/src/pages/discover.mdx
+++ b/src/pages/discover.mdx
@@ -221,6 +221,7 @@ Moondream provides a comprehensive set of visual understanding capabilities thro
       "Support interactive visual learning",
       "Enable visual data validation"
     ]}
+    href="/cloud/query"
   />
 
   <FeatureCard
@@ -234,6 +235,7 @@ Moondream provides a comprehensive set of visual understanding capabilities thro
       "Index visual content for search engines",
       "Generate metadata tags automatically"
     ]}
+    href="/cloud/caption"
   />
 
   <FeatureCard
@@ -247,6 +249,7 @@ Moondream provides a comprehensive set of visual understanding capabilities thro
       "Support automated quality control",
       "Power visual search features"
     ]}
+    href="/cloud/detect"
   />
 
   <FeatureCard
@@ -260,6 +263,7 @@ Moondream provides a comprehensive set of visual understanding capabilities thro
       "Create visual annotation tools",
       "Enable region-based image analysis"
     ]}
+    href="/cloud/point"
   />
 </div>
 
